# polymarket-trading-bot

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
examples/: portfolio_demo.py
src/polymarket_trading_bot/: __init__.py  __main__.py  bankroll.py  cli.py  config.py  edge.py  market.py  resolution.py  sample_data.py  scanner.py
tests/unit/: test_bankroll.py  test_cli.py  test_config.py  test_edge_market.py  test_resolution.py  test_scanner.py
